--- a/drools-spring-demo/pom.xml
+++ b/drools-spring-demo/pom.xml
@@ -29,6 +29,8 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<drools-version>9.44.0.Final</drools-version>
+        <kie-spring.version>7.74.1.Final</kie-spring.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -39,13 +41,13 @@
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-core</artifactId>
-			<version>9.44.0.Final</version>
+			<version>${drools-version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.kie</groupId>
 			<artifactId>kie-spring</artifactId>
-			<version>7.74.1.Final</version>
+			<version>${kie-spring.version}</version>
 		</dependency>
 
 		<dependency>
