--- a/drools-spring-demo/pom.xml
+++ b/drools-spring-demo/pom.xml
@@ -29,8 +29,9 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<spring.version>6.2.4</spring.version>
 		<drools-version>9.44.0.Final</drools-version>
-        <kie-spring.version>7.74.1.Final</kie-spring.version>
+		<kie-spring.version>7.74.1.Final</kie-spring.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -43,11 +44,25 @@
 			<artifactId>drools-core</artifactId>
 			<version>${drools-version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.kie</groupId>
 			<artifactId>kie-spring</artifactId>
 			<version>${kie-spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.12.1</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
