--- a/drools-spring-demo/pom.xml
+++ b/drools-spring-demo/pom.xml
@@ -46,6 +46,18 @@
 		</dependency>
 
 		<dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-compiler</artifactId>
+            <version>${drools-version}</version>
+        </dependency>
+
+		<dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-mvel</artifactId>
+            <version>${drools-version}</version>
+        </dependency>
+
+		<dependency>
 			<groupId>org.kie</groupId>
 			<artifactId>kie-spring</artifactId>
 			<version>${kie-spring.version}</version>
@@ -55,13 +67,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.12.1</version>
 			<scope>test</scope>
 		</dependency>
 
